Item13214: spacing fixes

--- a/ConfigurePlugin/pub/System/ConfigurePlugin/configure.uncompressed.css
+++ b/ConfigurePlugin/pub/System/ConfigurePlugin/configure.uncompressed.css
@@ -114,6 +114,7 @@ a {
 .header label {
   margin-right:0;
 }
+.node .node select,
 .node .node textarea,
 .node .node input,
 .node .node button,
